[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Tree.gd" type="Script" id=1]
[ext_resource path="res://assets/SunnysideWorld_Tileset_V0.1.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 384, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 208, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 208, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 80, 208, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 112, 208, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 144, 208, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 176, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 336, 32, 48 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 6.0

[node name="Tree" type="StaticBody2D" groups=["Trees"]]
script = ExtResource( 1 )
state = 2

[node name="ChopSprites" type="Node2D" parent="."]

[node name="ChopSprite1" type="Sprite" parent="ChopSprites"]
visible = false
position = Vector2( 0, -10 )
texture = SubResource( 8 )
region_rect = Rect2( 64, 384, 32, 48 )

[node name="ChopSprite2" type="Sprite" parent="ChopSprites"]
visible = false
position = Vector2( 0, -5 )
texture = SubResource( 9 )
region_rect = Rect2( 64, 384, 32, 48 )

[node name="PlantedSprite" type="Sprite" parent="."]
visible = false
texture = SubResource( 2 )

[node name="GrowSprites" type="Node2D" parent="."]

[node name="GrowSprite1" type="Sprite" parent="GrowSprites"]
visible = false
texture = SubResource( 3 )

[node name="GrowSprite2" type="Sprite" parent="GrowSprites"]
visible = false
texture = SubResource( 4 )

[node name="GrowSprite3" type="Sprite" parent="GrowSprites"]
visible = false
position = Vector2( 0, -3 )
texture = SubResource( 5 )

[node name="GrowSprite4" type="Sprite" parent="GrowSprites"]
visible = false
position = Vector2( 0, -10 )
texture = SubResource( 6 )

[node name="GrownSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
texture = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="GrowTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
